# sdk-examples

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: notebooks-integration.yaml  python-lint.yaml
ai-evals-course/: README.md
ai-evals-course/hw1/: .env.example  README.md  hw1.ipynb
ai-evals-course/hw2/: README.md  hw2.ipynb
ai-evals-course/hw3/: .env.example  README.md  hw3.ipynb
ai-evals-course/hw4/: .gitignore  README.md  hw4.ipynb
docs/: SPLUNK_AO_ENV_RENAME.md
java/: README.md  package-lock.json  pom.xml
java/chatbot/eu-ai-chatbot/: README.md
java/frontend/app/: globals.css  page.tsx
python/: Pipfile  rag-elastic-demo.py
python/agent/: RUNNING_EXAMPLES.md
python/agent-reliability-month/demo-graph/: GraphFromTrace.ipynb  Pipfile
python/agent/crew-ai/: README.md
python/agent/crewAI/: .env.example  README.md
python/agent/crewAI/research_crew/: README.md  pyproject.toml
python/agent/crewAI/research_crew/output/: report.md
python/agent/crewAI/research_crew/src/research_crew/: crew.py  main.py
python/agent/crewAI/research_crew/src/research_crew/config/: agents.yaml
python/agent/crewai-research-agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  research_planning.ipynb  tools.py
python/agent/google-adk/: README.md  requirements.txt
python/agent/langchain-agent/: .env.example  main.py
python/agent/langchain-middleware/: README.md  main.py  requirements.txt
python/agent/langgraph-fsi-agent/: README.md
python/agent/langgraph-open-telemetry/: README.md  main.py  pyproject.toml
python/agent/langgraph-otel/: README.md  main.py
python/agent/langgraph-telecom-agent/: .env.example  .gitignore  README.md  app.py  pyproject.toml
python/agent/langgraph-traceloop/: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml
python/agent/microsoft-agent-framework/: .env.example  README.md  agent.py  requirements.txt
python/agent/minimal-agent-example/: app.py  requirements.txt
python/agent/pydantic-ai-support-agent/: .env.example  README.md  pyproject.toml
python/agent/startup-simulator-3000/: README.md  TUTORIAL.md  agent.py  requirements.txt
python/agent/strands/: README.md  agent.py  requirements.txt
python/agent/strands-agents/: .env.example  README.md  agent.py  requirements.txt
python/agent/weather-vibes-agent/: agent.py
python/chatbot/basic-examples/: app.py  hallucination.py  package-lock.json  test.py
python/chatbot/elevenlabs-chatbot/: .env.example  README.md  galileo_handler.py  main.py  pyproject.toml  requirements.txt
python/chatbot/elevenlabs-chatbot-protect/: .env.example  README.md  config.py  conversation.py  elevenlabs_monitor.py  galileo_handler.py  main.py  pyproject.toml  requirements.txt
python/chatbot/elevenlabs-chatbot-protect/scripts/: create_stage.py
python/chatbot/sample-project-chatbot/: .env.example  README.md  app.py  requirements.txt  test.py
python/chatbot/sample-project-voice-chatbot/: README.md
python/code-insights/: experiment-code-insights.ipynb  foo.py
python/code-insights-dev/: deep_lookup.py  dev-code-insights.ipynb  dev_code_insights.py
python/customer-support-agent/: Pipfile  agent.ipynb  sample_dotenv
python/dataset-experiments/: requirements.txt
python/dataset-experiments/upload_experiment_v2/: README.md  upload_existing_results.py
python/mcp/: Pipfile  README.md  client.py  example_math_server.py  example_weather_server.py  server.py
python/rag/healthcare-support-portal/: .gitignore  ARCHITECTURE.md  Dockerfile.migrate  LICENSE  README.md  TUTORIAL.md  authorization.polar  docker-compose.yml  pyproject.toml  run_all.sh  setup.sh  stop_all.sh  sync_facts.sh  test_document.txt  validate_environment.sh
python/rag/healthcare-support-portal/db-init/: 01_seed_users.sql
python/rag/healthcare-support-portal/frontend/: .env.example  README.md  components.json  package-lock.json  package.json  react-router.config.ts  run.sh  tsconfig.json  vite.config.ts
python/rag/healthcare-support-portal/frontend/app/: root.tsx  routes.ts
python/rag/healthcare-support-portal/frontend/app/components/: Navigation.tsx  UserSwitcher.tsx
python/rag/healthcare-support-portal/frontend/app/components/documents/: DocumentForm.tsx  DocumentUpload.tsx
python/rag/healthcare-support-portal/frontend/app/components/embeddings/: EmbeddingStatus.tsx
python/rag/healthcare-support-portal/frontend/app/components/patients/: PatientForm.tsx
python/rag/healthcare-support-portal/frontend/app/components/ui/: badge.tsx  button.tsx  select.tsx
python/rag/healthcare-support-portal/frontend/app/components/users/: UserForm.tsx
python/rag/healthcare-support-portal/frontend/app/lib/: api.client.ts  api.server.ts  api.ts  auth.tsx  schemas.ts  types.ts  utils.ts
python/rag/healthcare-support-portal/frontend/app/lib/utils/: action-utils.ts  loader-utils.ts
python/rag/healthcare-support-portal/frontend/app/routes/: _index.tsx  _layout.tsx  chat.tsx  demo-login.tsx  documents.tsx  login.tsx  logout.tsx  settings.tsx
python/rag/healthcare-support-portal/frontend/app/routes/documents/: $id.tsx  new.tsx
python/rag/healthcare-support-portal/frontend/app/routes/patients/: $id.edit.tsx  index.tsx  new.tsx  patient.tsx
python/rag/healthcare-support-portal/frontend/app/routes/users/: $id.edit.tsx  index.tsx  new.tsx
python/rag/healthcare-support-portal/frontend/app/styles/: globals.css
python/rag/healthcare-support-portal/sample-documents/: policy-mindy-lahiri.md  protocol-grey-sloan-memorial.md
python/rag/healthcare-support-portal/sample-forms/: medical-history-derek-shepherd.md  medical-history-gregory-house.md
python/rag/healthcare-support-portal/scripts/: get_auth_token.sh  migrate.sh  test_ui_fixes.md
python/runtime-protect/: README.md
python/session/: session.ipynb
python/simple_agent/: simple_agent.ipynb  streamlit_agent.py
scripts/: run-notebooks-integration.sh
tests/: test_langchain.py
tests/utils/: get_notebook_pip_commands.py
typescript/datasets-experiments/: index.ts
typescript/rag/: app.ts  package-lock.json
(+259 files in other folders)
