[project]
name = "galileo-crewai-research-agent"
version = "0.1.0"
description = "A CrewAI Research Agent with Planning and Galileo evaluations"
license = "MIT"
requires-python = "<3.14,>=3.11"
dependencies = [
  "galileo==1.28.0",
  "crewai==0.203.1",
  "crewai-tools==0.76.0",  
  "exa-py~=1.16.1",
  "python-dotenv>=1.1.0",
  "openai~=1.109.1",
]

[dependency-groups]
dev = [
  "ruff>=0.11.11",
  "pytest>=8.4.1,<9.0.0",
  "pytest-dotenv>=0.5.2"
]

[tool.ruff]
line-length = 120