[project]
name = "healthcare-support-portal"
version = "0.1.0"
description = "Healthcare Support Portal - Microservices RAG Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "oso-cloud>=2.5.0",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "sqlalchemy-oso-cloud>=0.1.0",
]

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/auth",
    "packages/patient",
    "packages/rag"
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "frontend/node_modules",
]

# Same as Black.
line-length = 88

# Target Python 3.11+.
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "C4", "PIE", "SIM"]
ignore = ["B008", "E402", "B904"]  # B008: FastAPI Depends pattern; E402: imports after path manipulation; B904: Exception chaining not needed for HTTP errors

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
